[package]
name = "space_enhancer"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Globalization", # For GetKeyboardLayout
]}
lazy_static = "1.5.0" # For global static state
crossbeam-channel = "0.5" # For inter-thread communication
once_cell = "1.21"
